# chai

./: .gitignore  Cargo.toml  elm.json  index.html
elm/: build  uglify
elm/src/: Main.elm
rust/: Cargo.toml  build
rust/src/: game.rs  main.rs  ui.rs  util.rs
src/: Main.elm  board_view.rs  game.rs  lib.rs  main.rs  minimax.rs
