[package]
name = "chai"
version = "0.1.0"
authors = ["Tobbe <tobias.naumann@iml.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossterm = "0.19"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }
