[package]
name = "chai"
version = "0.1.0"
authors = ["Tobbe <tobias.naumann@iml.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chai"
crate-type = ["cdylib"]

[[bin]]
name = "chai"
required-features = ["build-binary"]

[features]
build-binary = ["crossterm", "tui"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"
serde_json = "1.0"
serde = { version = "1.0.118", features = ["derive"] }
crossterm = { version = "0.19", optional = true }
tui = { version = "0.13", default-features = false, features = ['crossterm'], optional = true }

# wasm-pack bug: https://stackoverflow.com/a/64507864
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-Oz", "--enable-mutable-globals", "-g"]

[profile.release]
lto = true
opt-level = 's' # only meaningful for wasm on the web, split in several crates?
